# cpp-finals

./: CMakeLists.txt  main.cpp  test.cpp  testEventParser.cpp  testEvents.cpp  testGetTime.cpp  testList.cpp  testQueue.cpp  testQueue2.cpp  testSerial.cpp
apps/: requisitos.md
apps/computer/: main.cpp
apps/embedded/: main.cpp
lib/include/: AIModel.hpp  AppMenu.hpp  Calendar.hpp  Clock.hpp  ClockCalendar.hpp  EventParser.hpp  Log.hpp  Node.hpp  Queue.hpp  Queue2.hpp  Sensor.hpp  Serial.hpp  Server.hpp  TemperatureSensor.hpp
lib/include/DataStructures/: List.hpp  ListIterator.hpp  Queue.hpp
lib/include/Event/: Error.hpp  Event.hpp  EventBase.hpp  Init.hpp  NewModelArrived.hpp  PredictFail.hpp  PredictOk.hpp  ReadFail.hpp  ReadOk.hpp  SendDataToServer.hpp  Sleep.hpp  WakeUp.hpp
lib/src/: Calendar.cpp  Clock.cpp  ClockCalendar.cpp  Queue.cpp  Serial.cpp
